# C6H7N-aniline

./: .gitignore  README.md
Columbus/: README.md  technique.md
Columbus-triplet/: README.md
Columbus-triplet/min-3B1/: min-TB1.xyz
Columbus-triplet/min-3B1-quinoid/: geom  min-3B1-quinoid.xyz
Columbus-triplet/min-3B2/: geom  sad-3B2.xyz
Columbus-triplet/sad-A3A1/: geom  sad-A3A1.xyz
Columbus-triplet/sad-X3A1/: geom  sad-X3A1.xyz
Columbus/A1-rotation/: README.md
Columbus/B1-rotation/: README.md
Columbus/Input/: IntCoordDef  IntCoordDef_disso  IntCoordDef_no-HN-sym  intcfl  intcfl_no-HN-sym  intcfl_planar
Columbus/NH2-rotation-A1/: README.md
Columbus/fast/: IntCoordDef_disso  README.md  gen_N-H1.py
Columbus/input/: IntCoordDef_perpendicular  IntCoordDef_planar  intcfl  intcfl_disso
Columbus/mex-A1-B1/: g.cart  g.int  geom.xyz  h.cart  h.int  intgeom  mex-A1-B1.int  mex-A1-B1.xyz  mocoef  norm.txt
Columbus/mex-B1-B2/: g.cart  g.int  geom  h.cart  intgeom  mex-B1-B2.int  mex-B1-B2.xyz  mocoef  norm.txt
Columbus/mex-B2-A2/: g.cart  geom  h.cart  intgeom  mex-B2-A2.int  mex-B2-A2.xyz  mocoef  norm.txt
Columbus/min-A1/: geom  geom_min-A1  intgeom  min-A1.int  min-A1.xyz
Columbus/min-A2/: geom  min-A2.int  mocoef
Columbus/min-B1/: geom  geom_min-B1  intgeom  min-B1.int  min-B1.xyz  mocoef
Columbus/min-B2/: geom  intgeom  min-B2.int  min-B2.xyz  mocoef
Columbus/min-TB1/: geom
Columbus/other/: README.md
Columbus/plot/: energy.txt  mex-B1-B2_min-B1.py  unit_mex-B1-B2_min-B1.txt
Columbus/rotation/: README.md
Columbus/sad-A1/: geom  sad-A1.int
Columbus/sad-A2/: geom  intgeom  sad-A2.int  sad-A2.xyz
Columbus/sad-B1/: README.md  geom  geom_sad-B1  mocoef  sad-B1.int  sad-B1.xyz
Columbus/sad-B2/: geom  sad-B2.int
Columbus/sad-B2-C2v/: geom  mocoef
Columbus/script/: symmetrize-C2v.py  symmetrize-Cs-oop.py
Columbus/slow/: README.md
Molcas/fast/: README.md
Molcas/script/: DaltonCarbonAO.py  DaltonHydrogenAO.py  DaltonNitrogenAO.py  README.md  dalton2molcas.py
SurfGenTorch/: IntCoordDef
bound-diabatz/: README.md  gen_sapoly.py
bound-diabatz/1_C2v/: Hd.in  Hd.net  parameters_1-1.txt  parameters_1-3.txt  parameters_2-2.txt  parameters_2-3.txt  parameters_3-3.txt
bound-diabatz/2_min-B2/: Hd.in  Hd.net  log  min-B2  min-B2_list.txt  prior_1-1.txt  prior_1-3.txt  prior_2-2.txt  prior_3-3.txt
bound-diabatz/3_no-deg/: 13.in  Hd.in  log  no-deg_list.txt  parameters_1-2.txt  parameters_1-3.txt  parameters_2-2.txt  parameters_2-3.txt  parameters_3-3.txt  prior.net
bound-diabatz/data/: list.txt  no-deg_list.txt
bound-diabatz/double-cone/: CMakeLists.txt  README.md  int2cart.cpp  main.cpp
bound-diabatz/min-A1/: 2.net  2_1-1.txt  2_1-2.txt  2_1-3.txt  2_2-2.txt  2_2-3.txt  2_3-3.txt  Hd.in  Hd.net  gen_sapoly.py  log  mex-B1-B2  min-A1  min-B1_min-B2  parameters_1-1.txt  parameters_1-2.txt  parameters_1-3.txt  parameters_2-2.txt  parameters_2-3.txt  parameters_3-3.txt  sapoly.in
bound-diabatz/surface/: Hd.net  list.txt  mex-B1-B2
diabatz/: CNPI.md  README.md  expansion.md  hyperparameter.md  link_input.sh  model.md  sapoly.in  symmetry.md  training_procedure.md
diabatz-slow/: README.md
diabatz-slow/train/: pretrain-11.in  pretrain-12.in  pretrain-13.in  pretrain-14.in  pretrain-22.in  pretrain-23.in  pretrain-24.in  pretrain-33.in  pretrain-34.in  pretrain-44.in  pretrain-Hd.in  pretrain-Hd.net
diabatz/1_C2v/: Hd.in
diabatz/2_bound/: Hd.net
diabatz/2nd-order/: 12.in  13.in
diabatz/3_start-disso/: Hd.net  Run
diabatz/4_more-disso/: min-B1  more-disso_list.txt  sad-B2
diabatz/4th-order/: 12.in  14.in  Hd.in
diabatz/analysis/: 11.in  12.in  14.in  23.in  24.in  33.in  34.in  44.in  Hd.net  IntCoordDef  README.md  origin.int  pretrain-11.in  pretrain-12.in  pretrain-13.in  (+11 more)
diabatz/analysis/double-cone_mex-B1-B2/: CMakeLists.txt  README.md  plot_double-cone.py  smooth-mesh.py
diabatz/analysis/double-cone_mex-B1-B2/run/: h.cart  h.int  lower.txt  mex-B1-B2.int  opt.IntCoordDef  plot-mesh.txt  plot.IntCoordDef  smooth-mesh.txt  upper.txt
diabatz/analysis/double-cone_mex-B1-B2/source/: main.cpp
diabatz/analysis/loop/hcenter/: CMakeLists.txt  README.md  gen_Run-left.sh  gen_Run-right.sh
diabatz/analysis/loop/hcenter/run/: 11.in  14.in  24.in  44.in  Hd.in  IntCoordDef  pretrain-11.in  pretrain-22.in  pretrain-23.in  pretrain-24.in  pretrain-33.in  pretrain-Hd.in
diabatz/analysis/loop/hcenter/source/: loop.cpp  main.cpp
diabatz/analysis/loop/hcenter/v1/: CMakeCache.txt  Makefile  cmake_install.cmake
diabatz/analysis/loop_mex-B1-B2_mex-B2-A2/: CMakeLists.txt  README.md
diabatz/analysis/loop_mex-B1-B2_mex-B2-A2/source/: B1B2.cpp  B1B2_B2A2_12.cpp  B1B2_B2A2_23.cpp  B2A2.cpp  main.cpp  utility.cpp  utility.hpp
diabatz/repulsion/gen_parameters/: CMakeLists.txt  README.md  gen_parameters.py  main.cpp
diabatz/repulsion/gen_parameters/cpp-files/: Bond-Hessian.IntCoordDef  Hessian-length.txt  min-B1_hessian-B1
diabatz/repulsion/gen_parameters/python-files/: Hessian-length.txt  parameters.txt
hop/: Hessian.txt  README.md  build.sh  rebuild.sh
hop/MD/: CMakeLists.txt  README.md
hop/MD/source/: Hd.cpp  initer.cpp  main.cpp  trajwriter.cpp
hop/analysis/adiabatic-footprint/: CMakeLists.txt  README.md  main.cpp
hop/analysis/intcoord-footprint/: CMakeLists.txt  README.md  main.cpp
plot/: energy.data  mex-B1-B2_min-B1.txt  to_min-B1.data
test/: coord  data
vibronics/: A2.py  B2.py  README.md  copy.sh  filter.py  gen_vibration.py  parameter.txt  plot.py  prepare.sh  run-4.sh
(+18164 files in other folders)
